--- a/index.html
+++ b/index.html
@@ -180,49 +180,115 @@
             <div class="center-line"></div>
 
             <!--NUM Game-->
-            <div class="horizontal-line" style="transform: translateY(-1900px); left: 50%;"></div>
-            <div class="pointGroup" style="transform:  translateX(50%) translateY(-1900px); right: 25%;">
+            <div class="horizontal-line" style="transform: translateY(-3500px); left: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(50%) translateY(-3500px); right: 25%;">
                 <div class="pointer-line"></div>
                 <img src="assets/triangle.svg" class="shapen"
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
                     onerror="this.style.display='none'">
-                <p class="picTitle">Number Game</p>
+                <p class="picTitle">Number Game (Java)</p>
                 <img src="assets/ng.png" class="workShown">
                 <p class="workText">I developed a digital implementation of the classic NIM strategy game, showcasing
                     algorithmic thinking, clean code architecture, and problem-solving skills by translating
                     mathematical game theory into a functional turn-based system with proper state management and user
                     interaction handling.</p>
+            </div>
+
+            <div class="decorativeBunch" style="left: 20%;">
+                <img src="assets/box.svg" class="shapen triangle-9"
+                    style="width: 70px; height: 70px; animation: floating 2s ease-in-out infinite;">
+                <img src="assets/triangle.svg" class="shapen triangle-9"
+                    style="transform: rotate(45deg); margin-left: 70px; animation: floating 3s ease-in-out infinite;">
+                <div class="circle-intro" style="margin: 20px; animation: floating 4s ease-in-out infinite;"
+                    onerror="this.style.display='none'">
+                    <img src="assets/box.svg" class="shapen triangle-9"
+                        style="width: 70px; height: 70px; animation: floating 2s ease-in-out infinite;">
+                </div>
+                <div class="circle-intro" style="margin-left: 100px; animation: floating 3s ease-in-out infinite;"
+                    onerror="this.style.display='none'">
+                    <img src="assets/box.svg" class="shapen triangle-9"
+                        style="width: 70px; height: 70px; margin-top: 100px; margin-left: 100px; transform: rotate(50deg); animation: floating 2s ease-in-out infinite;">
+                </div>
             </div>
 
             <!--Family Tree Software-->
-            <div class="horizontal-line" style="transform: translateY(-1350px); right: 50%;"></div>
-            <div class="pointGroup" style="transform:  translateX(-50%) translateY(-1350px); left: 25%;">
+            <div class="horizontal-line" style="transform: translateY(-2950px); right: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(-50%) translateY(-2950px); left: 25%;">
                 <div class="pointer-line"></div>
                 <img src="assets/triangle.svg" class="shapen"
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
                     onerror="this.style.display='none'">
-                <p class="picTitle">Family Tree Software</p>
+                <p class="picTitle">Family Tree Software (Java)</p>
                 <img src="assets/ftsw.png" class="workShown">
-                <p class="workText">I developed a comprehensive family tree management software featuring a full-stack
-                    GUI application with data persistence, and statistical analysis
-                    capabilities, including member management, age comparisons, lifespan calculations, and file I/O
-                    operations, demonstrating strong object-oriented design, user interface development, and software
-                    architecture skills.</p>
+                <p class="workText">This Family Tree Management System showcases robust object-oriented design, scalable
+                    GUI development, and systematic problem-solving abilities through modular architecture, JSON
+                    persistence, and comprehensive testing. I resolved a critical scalability challenge by implementing
+                    a scrollable interface component when dynamic data wasn't displaying properly, demonstrating my
+                    capacity to debug complex UI issues and deliver scalable solutions.</p>
             </div>
 
-            <!--NUM Game-->
-            <div class="horizontal-line" style="transform: translateY(-800px); left: 50%;"></div>
-            <div class="pointGroup" style="transform:  translateX(50%) translateY(-800px); right: 25%;">
+            <!--Star Position Mapper-->
+            <div class="horizontal-line" style="transform: translateY(-2400px); left: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(50%) translateY(-2400px); right: 25%;">
                 <div class="pointer-line"></div>
                 <img src="assets/triangle.svg" class="shapen"
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
                     onerror="this.style.display='none'">
-                <p class="picTitle">Number Game</p>
-                <img src="assets/ng.png" class="workShown">
-                <p class="workText">I developed a digital implementation of the classic NIM strategy game, showcasing
-                    algorithmic thinking, clean code architecture, and problem-solving skills by translating
-                    mathematical game theory into a functional turn-based system with proper state management and user
-                    interaction handling.</p>
+                <p class="picTitle">Star Position Mapper (Python)</p>
+                <img src="assets/sv.png" class="workShown">
+                <p class="workText">This Star Visualizer Tool transforms raw astronomical coordinate data into accurate
+                    polar coordinate visualizations, demonstrating data processing, mathematical modeling, and
+                    scientific visualization skills using Python. The application converts star position data into
+                    visual representations showing both angle and distance from Earth, showcasing my ability to
+                    translate complex scientific data into intuitive graphical displays of our local star system.</p>
+            </div>
+
+            <!--Star Classification ML Model-->
+            <div class="horizontal-line" style="transform: translateY(-1850px); right: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(-50%) translateY(-1850px); left: 25%;">
+                <div class="pointer-line"></div>
+                <img src="assets/triangle.svg" class="shapen"
+                    style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
+                    onerror="this.style.display='none'">
+                <p class="picTitle">Star Classification (ML in R)</p>
+                <img src="assets/sc.png" class="workShown">
+                <p class="workText">This collaborative Star Classification Model achieved 98.33% accuracy using
+                    K-Nearest Neighbors algorithm to predict star categories from physical properties (temperature,
+                    luminosity, radius, absolute magnitude), demonstrating team-based machine learning development,
+                    statistical analysis, and scientific research methodology through rigorous data analysis and
+                    comprehensive documentation of model development and validation.</p>
+            </div>
+
+            <!--Student Course Portal-->
+            <div class="horizontal-line" style="transform: translateY(-1300px); left: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(50%) translateY(-1300px); right: 25%;">
+                <div class="pointer-line"></div>
+                <img src="assets/triangle.svg" class="shapen"
+                    style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
+                    onerror="this.style.display='none'">
+                <p class="picTitle">Student Course Portal (Web)</p>
+                <img src="assets/eps.png" class="workShown">
+                <p class="workText">This Course Selection Website project demonstrates leadership, full-stack web
+                    development, and user-centered design skills by leading a 30+ student team to create a comprehensive
+                    educational resource. The platform has served over 2,000 users in 2023 alone and remains actively
+                    used today, showcasing my ability to manage large teams, implement responsive design based on user
+                    feedback, and deliver scalable, sustainable solutions with lasting impact.</p>
+            </div>
+
+            <!--Timer-->
+            <div class="horizontal-line" style="transform: translateY(-750px); right: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(-50%) translateY(-750px); left: 25%;">
+                <div class="pointer-line"></div>
+                <img src="assets/triangle.svg" class="shapen"
+                    style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
+                    onerror="this.style.display='none'">
+                <p class="picTitle">Tournament Software (Web)</p>
+                <img src="assets/tsw.png" class="workShown">
+                <p class="workText">This Judo Tournament Scorekeeping Software demonstrates real-time application
+                    development and event management capabilities by creating a comprehensive scoring system that
+                    determines winners based on points and timer status. The software was successfully deployed at the
+                    2019 White Rock Rumble tournament, demonstrating practical software implementation in live
+                    competitive environments.</p>
             </div>
         </div>
     </section>
