--- a/index.html
+++ b/index.html
@@ -194,21 +194,17 @@
                     interaction handling.</p>
             </div>
 
-            <div class="decorativeBunch" style="left: 20%;">
-                <img src="assets/box.svg" class="shapen triangle-9"
-                    style="width: 70px; height: 70px; animation: floating 2s ease-in-out infinite;">
-                <img src="assets/triangle.svg" class="shapen triangle-9"
-                    style="transform: rotate(45deg); margin-left: 70px; animation: floating 3s ease-in-out infinite;">
-                <div class="circle-intro" style="margin: 20px; animation: floating 4s ease-in-out infinite;"
-                    onerror="this.style.display='none'">
-                    <img src="assets/box.svg" class="shapen triangle-9"
-                        style="width: 70px; height: 70px; animation: floating 2s ease-in-out infinite;">
-                </div>
-                <div class="circle-intro" style="margin-left: 100px; animation: floating 3s ease-in-out infinite;"
-                    onerror="this.style.display='none'">
-                    <img src="assets/box.svg" class="shapen triangle-9"
-                        style="width: 70px; height: 70px; margin-top: 100px; margin-left: 100px; transform: rotate(50deg); animation: floating 2s ease-in-out infinite;">
-                </div>
+            <img src="assets/box.svg" class="triangle-9 float" style="width: 70px; height: 70px; 
+            position: absolute; left: 400px; top: 2600px">
+            <img src="assets/triangle.svg" class="shapen triangle-9 float"
+                style="transform: rotate(45deg); margin-left: 70px; position: absolute; left: 300px; top: 2800px">
+            <div class="circle-intro float" style="margin: 20px; position: absolute; left: 200px; top: 2800px"
+                onerror="this.style.display='none'">
+            </div>
+            <img src="assets/triangle.svg" class="shapen triangle-9 float"
+                style="transform: rotate(180deg); margin-left: 70px; position: absolute; left: 200px; top: 2800px">
+            <div class="circle-intro float" style="margin-left: 100px; position: absolute; left: 200px; top: 2500px"
+                onerror="this.style.display='none'">
             </div>
 
             <!--Family Tree Software-->
