--- a/index.html
+++ b/index.html
@@ -192,10 +192,26 @@
                     algorithmic thinking, clean code architecture, and problem-solving skills by translating
                     mathematical game theory into a functional turn-based system with proper state management and user
                     interaction handling.</p>
-                <div style="position: absolute; margin-top: 150px;">
-                    <svg width="400px" height="150">
+                <div style="transform: rotate(180deg); margin-top: 10px;">
+                    <div class="circle-intro float" onerror="this.style.display='none'">
+                    </div>
+                </div>
+                <div class="float">
+                    <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(180deg);">
+                </div>
+                <div style="position: absolute; margin-top: 0px;">
+                    <svg width="420px" height="150">
                         <path class="sineWave" id="sineWave"></path>
                     </svg>
+                </div>
+                <div style="margin-top: 180px">
+                    <div class="float">
+                        <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(180deg);">
+                    </div>
+                    <div style="transform: rotate(180deg);">
+                        <div class="circle-intro float" onerror="this.style.display='none'">
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -243,6 +259,29 @@
                     persistence, and comprehensive testing. I resolved a critical scalability challenge by implementing
                     a scrollable interface component when dynamic data wasn't displaying properly, demonstrating my
                     capacity to debug complex UI issues and deliver scalable solutions.</p>
+                <div style="margin-top: 20px;">
+                    <img src="assets/box.svg" class="triangle-9 float" style="width: 70px; height: 70px;">
+                    <img src="assets/triangle.svg" class="shapen triangle-9 float"
+                        style="transform: rotate(45deg); margin-left: 70px;">
+                    <div style="transform: translateX(200px)">
+                        <div class="circle-intro float" onerror="this.style.display='none'">
+                        </div>
+                    </div>
+                    <div style="transform: translateX(340px)">
+                        <div class="float">
+                            <img src="assets/box.svg" class="triangle-9"
+                                style="width: 70px; height: 70px; transform: rotate(30deg);">
+                        </div>
+                    </div>
+                    <div style="transform: translateX(180px)">
+                        <div class="circle-intro float" onerror="this.style.display='none'">
+                        </div>
+                    </div>
+                    <div class="float">
+                        <img src="assets/box.svg" class="triangle-9"
+                            style="width: 70px; height: 70px; transform: rotate(50deg);">
+                    </div>
+                </div>
             </div>
 
 
@@ -276,6 +315,31 @@
                     luminosity, radius, absolute magnitude), demonstrating team-based machine learning development,
                     statistical analysis, and scientific research methodology through rigorous data analysis and
                     comprehensive documentation of model development and validation.</p>
+                <div style="margin-top: 20px;">
+                    <img src="assets/box.svg" class="triangle-9 float" style="width: 70px; height: 70px;">
+                    <img src="assets/box.svg" class="triangle-9 float"
+                        style="transform: rotate(45deg); margin-left: 70px; width: 70px; height: 70px;">
+                    <div style="transform: translateX(200px)">
+                        <div class="circle-intro float" onerror="this.style.display='none'">
+                        </div>
+                    </div>
+                    <div style="transform: translateX(340px)">
+                        <div class="float">
+                            <img src="assets/triangle.svg" class="triangle-9"
+                                style="width: 60px; height: 60px; transform: rotate(30deg);">
+                        </div>
+                    </div>
+                    <div style="transform: translateX(180px)">
+                        <div class="circle-intro float" onerror="this.style.display='none'">
+                        </div>
+                    </div>
+                    <div style="transform: translateX(300px)">
+                        <div class="float">
+                            <img src="assets/triangle.svg" class="triangle-9"
+                                style="width: 60px; height: 60px; transform: rotate(50deg);">
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!--Student Course Portal-->
