--- a/index.html
+++ b/index.html
@@ -375,10 +375,24 @@
             </div>
         </div>
     </section>
-    <footer id="contactMe">
-
-    </footer>
 </body>
+
+<footer id="contactMe">
+    <div class="footerTransition">
+    </div>
+    <p class="footerTitle">
+        Let's Connect!
+    </p>
+    <div class="social-links">
+        <a href="https://linkedin.com/in/matthewmolski" class="social-link" rel="noopener">
+            <img src="/assets/ln-white.png" alt="LinkedIn" class="social-logo">
+        </a>
+        <a href="https://github.com/MattMatt05" class="social-link" rel="noopener">
+            <img src="assets/gh.png" alt="GitHub" class="social-logo">
+        </a>
+    </div>
+    <p class="reserved">© 2025 Matthew Molski. All rights reserved.</p>
+</footer>
 
 <script>
     let time = 0;
