--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!--Navigation Bar-->
     <div class="navbar">
         <div class="container flex">
-            <p class="navName">
+            <a href="#top" class="navName">
                 Matthew Molski
-            </p>
+            </a>
             <nav>
                 <ul>
                     <li><a href="#aboutMe">About Me</a></li>
@@ -29,7 +29,7 @@
         </div>
     </div>
     <!--Intro Segment-->
-    <section class="introSegment">
+    <section class="introSegment" id="top">
         <div class="container grid">
             <div class="visualDesign">
                 <div class="visualizeMe">
