--- a/index.html
+++ b/index.html
@@ -299,6 +299,19 @@
                     scientific visualization skills using Python. The application converts star position data into
                     visual representations showing both angle and distance from Earth, showcasing my ability to
                     translate complex scientific data into intuitive graphical displays of our local star system.</p>
+                    <div style="transform: rotate(180deg); margin-top: 10px;">
+                    <div class="circle-intro float" onerror="this.style.display='none'">
+                    </div>
+                </div>
+                <div class="float">
+                    <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(180deg);">
+                </div>
+                <div style="transform: translateX(70px) translateY(-50px);">
+                    <svg width="300" height="300">
+                        <path class="pathCircle" id="pathCircle"></path>
+                        <circle class="dotCircle" id="dotCircle"></circle>
+                    </svg>
+                </div>
             </div>
 
             <!--Star Classification ML Model-->
@@ -356,6 +369,30 @@
                     educational resource. The platform has served over 2,000 users in 2023 alone and remains actively
                     used today, showcasing my ability to manage large teams, implement responsive design based on user
                     feedback, and deliver scalable, sustainable solutions with lasting impact.</p>
+                <div style="transform: rotate(180deg); margin-top: 10px;">
+                    <div class="circle-intro float" onerror="this.style.display='none'">
+                    </div>
+                </div>
+                <div class="float">
+                    <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(180deg);">
+                </div>
+                <div style="transform: translateX(-20px);">
+                    <svg width="600px" height="300">
+                        <g id="circles"></g>
+                        <g id="lines"></g>
+                        <path class="wave" id="wave"></path>
+                        <circle class="dot" id="dot"></circle>
+                    </svg>
+                </div>
+                <div>
+                    <div class="float">
+                        <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(180deg);">
+                    </div>
+                    <div style="transform: rotate(180deg);">
+                        <div class="circle-intro float" onerror="this.style.display='none'">
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!--Timer-->
@@ -411,6 +448,100 @@
     }
 
     drawSine();
+
+    let t = 0;
+    let points = [];
+
+    function draw() {
+        // Clear old elements
+        document.getElementById('circles').innerHTML = '';
+        document.getElementById('lines').innerHTML = '';
+
+        let x = 100;
+        let y = 150;
+
+        // 5 circles for square wave
+        for (let i = 0; i < 5; i++) {
+            let n = 2 * i + 1; // 1, 3, 5, 7, 9
+            let r = 40 / n;
+            let angle = n * t * 0.03;
+
+            // Draw circle
+            let circle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
+            circle.setAttribute('cx', x);
+            circle.setAttribute('cy', y);
+            circle.setAttribute('r', r);
+            circle.classList.add('circle');
+            document.getElementById('circles').appendChild(circle);
+
+            // Next position
+            let nextX = x + r * Math.cos(angle);
+            let nextY = y + r * Math.sin(angle);
+
+            // Draw line
+            let line = document.createElementNS('http://www.w3.org/2000/svg', 'line');
+            line.setAttribute('x1', x);
+            line.setAttribute('y1', y);
+            line.setAttribute('x2', nextX);
+            line.setAttribute('y2', nextY);
+            line.classList.add('line');
+            document.getElementById('lines').appendChild(line);
+
+            x = nextX;
+            y = nextY;
+        }
+
+        // Update dot
+        document.getElementById('dot').setAttribute('cx', x);
+        document.getElementById('dot').setAttribute('cy', y);
+
+        // Add to wave
+        points.push({ x: 250, y: y });
+        if (points.length > 200) points.shift();
+
+        // Draw wave
+        let path = '';
+        points.forEach((p, i) => {
+            let waveX = 250 + i;
+            path += (i === 0 ? 'M' : 'L') + ` ${waveX} ${p.y}`;
+        });
+        document.getElementById('wave').setAttribute('d', path);
+
+        t++;
+        requestAnimationFrame(draw);
+    }
+
+    draw();
+
+    let angle = 0;
+    let pointsCircle = [];
+
+    function drawCircle() {
+        // Calculate point on circle
+        let x = 150 + 80 * Math.cos(angle);
+        let y = 150 + 80 * Math.sin(2*angle);
+
+        // Add to points array
+        pointsCircle.push({ x, y });
+
+        // Keep only last 100 points
+        if (pointsCircle.length > 100) pointsCircle.shift();
+
+        // Draw path
+        let pathData = '';
+        pointsCircle.forEach((p, i) => {
+            pathData += (i === 0 ? 'M' : 'L') + ` ${p.x} ${p.y}`;
+        });
+
+        document.getElementById('pathCircle').setAttribute('d', pathData);
+        document.getElementById('dotCircle').setAttribute('cx', x);
+        document.getElementById('dotCircle').setAttribute('cy', y);
+
+        angle += 0.05;
+        requestAnimationFrame(drawCircle);
+    }
+
+    drawCircle();
 </script>
 
 </HTML>
