--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(180deg);">
                 </div>
                 <div
-                    style="transform: translateX(70px) translateY(-50px); background-color: aliceblue; width: 250px; height: 250px;">
+                    style="transform: translateX(70px) translateY(-50px); width: 250px; height: 250px;">
                     <svg width="300" height="300">
                         <path class="pathCircle" id="pathCircle"></path>
                         <circle class="dotCircle" id="dotCircle"></circle>
@@ -377,12 +377,12 @@
                 <div class="float">
                     <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(180deg);">
                 </div>
-                <div style="transform: translateX(-20px);  background-color: aliceblue;">
-                    <svg width="600px" height="300">
-                        <g id="circles"></g>
-                        <g id="lines"></g>
-                        <path class="wave" id="wave"></path>
-                        <circle class="dot" id="dot"></circle>
+                <div style="transform: translateX(-20px);">
+                    <svg width="460px" height="300">
+                        <g id="circles" background-color="aliceblue;"></g>
+                        <g id="lines" background-color="aliceblue;"></g>
+                        <path class="wave" id="wave" background-color="aliceblue;"></path>
+                        <circle class="dot" id="dot" background-color="aliceblue;"></circle>
                     </svg>
                 </div>
                 <div>
