--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             </div>
             <div class="introText">
                 <h1>Welcome!</h1>
-                <h3>I'm <u>Matthew Molski</u><br>UBC Math & Data Science</h3>
+                <h3>I'm <a href="https://linkedin.com/in/matthewmolski" rel="noopener" id="myName"><u>Matthew
+                            Molski</u></a><br>UBC Math & Data Science</h3>
                 <br>
                 <h4>Software Developer<br>Aspiring Data Scientist</h4>
                 <a class="myWorkButton" href="#myWork">My Work</a>
@@ -143,7 +144,10 @@
     </div>
     <section class="meInterest">
         <div class="imageInfo">
-            <img src="assets/judo.png" class="storyImg">
+            <a href="https://www.peacearchnews.com/sports/white-rock-judo-champ-undefeated-at-bc-winter-games-2838729"
+                class="workShown-link viewArticle">
+                <img src="assets/judo.png" class="storyImg">
+            </a>
             <p>Winning Gold BC Winter Games (2020)</p>
         </div>
         <div class="middleContent">
@@ -187,7 +191,9 @@
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
                     onerror="this.style.display='none'">
                 <p class="picTitle">Number Game (Java)</p>
-                <img src="assets/ng.png" class="workShown">
+                <a href="https://github.com/MattMatt05/NumberGame" class="workShown-link">
+                    <img src="assets/ng.png" class="workShown">
+                </a>
                 <p class="workText">I developed a digital implementation of the classic NIM strategy game, showcasing
                     algorithmic thinking, clean code architecture, and problem-solving skills by translating
                     mathematical game theory into a functional turn-based system with proper state management and user
@@ -253,7 +259,9 @@
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
                     onerror="this.style.display='none'">
                 <p class="picTitle">Family Tree Software (Java)</p>
-                <img src="assets/ftsw.png" class="workShown">
+                <a href="https://github.com/MattMatt05/FamilyTreeSoftware" class="workShown-link">
+                    <img src="assets/ftsw.png" class="workShown">
+                </a>
                 <p class="workText">This Family Tree Management System showcases robust object-oriented design, scalable
                     GUI development, and systematic problem-solving abilities through modular architecture, JSON
                     persistence, and comprehensive testing. I resolved a critical scalability challenge by implementing
@@ -306,8 +314,7 @@
                 <div class="float">
                     <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(180deg);">
                 </div>
-                <div
-                    style="transform: translateX(70px) translateY(-50px); width: 250px; height: 250px;">
+                <div style="transform: translateX(70px) translateY(-50px); width: 250px; height: 250px;">
                     <svg width="300" height="300">
                         <path class="pathCircle" id="pathCircle"></path>
                         <circle class="dotCircle" id="dotCircle"></circle>
@@ -323,7 +330,10 @@
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
                     onerror="this.style.display='none'">
                 <p class="picTitle">Star Classification (ML in R)</p>
-                <img src="assets/sc.png" class="workShown">
+                <a href="https://github.com/haovvrld/DSCI-009-Group-17-Proposal/blob/main/DSC_009_group_17_final_project.ipynb"
+                    class="workShown-link">
+                    <img src="assets/sc.png" class="workShown">
+                </a>
                 <p class="workText">This collaborative Star Classification Model achieved 98.33% accuracy using
                     K-Nearest Neighbors algorithm to predict star categories from physical properties (temperature,
                     luminosity, radius, absolute magnitude), demonstrating team-based machine learning development,
@@ -364,7 +374,9 @@
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
                     onerror="this.style.display='none'">
                 <p class="picTitle">Student Course Portal (Web)</p>
-                <img src="assets/eps.png" class="workShown">
+                <a href="https://elginparksecondary.com/" class="workShown-link">
+                    <img src="assets/eps.png" class="workShown">
+                </a>
                 <p class="workText">This Course Selection Website project demonstrates leadership, full-stack web
                     development, and user-centered design skills by leading a 30+ student team to create a comprehensive
                     educational resource. The platform has served over 2,000 users in 2023 alone and remains actively
