Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
     <title>Portfolio</title>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJTNBQCBJ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-ZJTNBQCBJ8');
+</script>
 <body>
     <!--Navigation Bar-->
     <div class="navbar">
